--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,13 @@ body {
     line-height: 1.88;
     text-align: center;
 }
+
+.button.primary:hover,
+.button.primary:focus {
+    color: var(--white-color);
+    background-color: var(--background-active-button);
+}
+
 .button.secondary {
     color: var(--title-text-color);
     background-color: var(--background-grey-color);
